# acp-workspace

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CODE_REVIEW.md  DI_ANALYSIS_REPORT.md  Makefile  README.md  RPC_DELAY_ANALYSIS.md  pytest_output.txt  test_results.txt  type_errors.txt
acp-client/: ACTION_NEW_SESSION_DESIGN.md  ARCHITECTURE-LAYERS.md  DEVELOPING.md  DI_IMPROVEMENTS.md  MIGRATION-FROM-OLD-API.md  README.md  TESTING-STRATEGY.md  TODO.md  UI_UX_IMPROVEMENT_PLAN.md  pyproject.toml  type_check_final.txt  type_check_output.txt
acp-client/tests/: conftest.py  test_acp_transport_service.py  test_application_list_sessions_use_case.py  test_application_load_session_use_case.py  test_application_state_machine.py  test_background_receive_loop.py  test_cli.py  test_cli_entrypoints.py  test_concurrent_receive_calls.py  test_content_audio.py  test_content_base.py  test_content_embedded.py  test_content_image.py  test_content_integration.py  test_content_resource_link.py  test_content_text.py  test_di_bootstrapper.py  test_di_container_dispose.py  test_di_container_integration.py  test_domain_entities.py  test_file_system_executor.py  test_file_system_handler.py  test_infrastructure_di_container.py  test_infrastructure_events_bus.py  test_infrastructure_handler_registry.py  test_infrastructure_logging.py  test_infrastructure_message_parser.py  test_infrastructure_plugins_manager.py  test_infrastructure_transport.py  test_integration_with_server.py  test_logging.py  test_message_router.py  test_messages.py  test_navigation_manager.py  test_navigation_queue.py  test_navigation_tracker.py  test_permission_handler.py  test_permission_handler_direct_lifecycle.py  test_presentation_base_view_model.py  test_presentation_chat_view_model.py  (+36 more)
acp-server/: .env.example  BUGFIX_OPENAI_TOOL_CALLS.md  CONFIGURATION.md  README.md  REFACTORING_STATUS.md  SESSION_PROMPT_REFACTORING_PLAN.md  STAGE_6_DETAILED_PLAN.md  TOOL_CALLS_DIAGNOSTIC_REPORT.md  TOOL_CALLS_FIX_ARCHITECTURE.md  pyproject.toml
acp-server/docs/: ARCHITECTURE.md
acp-server/tests/: test_agent_base.py  test_agent_orchestrator.py  test_client_rpc_handler.py  test_client_rpc_service.py  test_client_rpc_service_integration.py  test_conformance.py  test_content_audio.py  test_content_base.py  test_content_embedded.py  test_content_extraction.py  test_content_formatting.py  test_content_image.py  test_content_integration.py  test_content_resource_link.py  test_content_text.py  test_directive_resolver.py  test_end_to_end_with_storage.py  test_fs_executors.py  test_full_session_lifecycle.py  test_global_policy_integration.py  test_global_policy_manager.py  test_global_policy_storage.py  test_history_persistence_and_replay.py  test_http_server.py  test_http_server_stage6.py  test_llm_provider.py  test_mcp_module.py  test_naive_agent.py  test_openai_message_history.py  test_permission_flow.py  test_permission_manager.py  test_permission_policy_persistence.py  test_plan_builder.py  (+27 more)
codelab/: .env.example  README.md  pyproject.toml
(+518 files in other folders)
