[project]
name = "acp-client"
version = "0.1.0"
description = "ACP client implementation for HTTP and WebSocket transports"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "aiofiles>=23.2.0",
  "aiohttp>=3.12.15",
  "pydantic>=2.11.0",
  "rich>=13.0.0",
  "structlog>=24.1.0",
  "textual>=0.30.0",
]

[project.scripts]
acp-client = "acp_client.cli:run_client"
acp-client-tui = "acp_client.tui.__main__:main"

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/acp_client"]

[dependency-groups]
dev = [
  "pytest>=8.3.5",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.11.4",
  "ty>=0.0.1a11",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ty.src]
include = ["src", "tests"]

[tool.pytest.ini_options]
pythonpath = ["src", "../acp-server/src"]
asyncio_mode = "auto"
