[project]
name = "acp-server"
version = "0.1.0"
description = "ACP server implementation with HTTP/WebSocket transports"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "aiohttp>=3.12.15",
  "pydantic>=2.11.0",
  "structlog>=24.1.0",
]

[project.scripts]
acp-server = "acp_server.cli:run_server"

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/acp_server"]

[dependency-groups]
dev = [
  "pytest>=8.3.5",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.11.4",
  "ty>=0.0.1a11",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ty.src]
include = ["src", "tests"]

[tool.pytest.ini_options]
pythonpath = ["src"]
